Delete all the easy visible bugs and all console.log lines

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: right;
+  flex-wrap: wrap;
   padding: 1px;
   margin: 5px;
   width: 400px;
